<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	
	<groupId>space.arim.omnibus</groupId>
	<artifactId>omnibus</artifactId>
	<version>1.1.0-SNAPSHOT</version>

	<name>Omnibus</name>
	<description>Events, services, and concurrency frameworks</description>
	<url>https://github.com/A248/Omnibus</url>
	<inceptionYear>2019</inceptionYear>
	
	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<junit.version>5.7.1</junit.version>
		<mockito.version>3.9.0</mockito.version>
		<maven.compiler.release>11</maven.compiler.release>
		<jacoco.argLine />
	</properties>

	<scm>
		<developerConnection>scm:git:https://github.com/A248/Omnibus.git</developerConnection>
	  <tag>HEAD</tag>
  </scm>

	<licenses>
		<license>
			<name>GNU Lesser General Public License, Version 3</name>
			<url>https://www.gnu.org/licenses/lgpl-3.0-standalone.html</url>
			<distribution>repo</distribution>
		</license>
	</licenses>
	
	<developers>
		<developer>
			<id>anandbeh</id>
			<name>Anand Beh</name>
			<url>https://www.arim.space</url>
			<roles>
				<role>creator</role>
				<role>developer</role>
			</roles>
			<timezone>America/New_York</timezone>
		</developer>
	</developers>
	
	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.1</version>
				<executions>
					<execution>
						<id>compile-concurrency-test</id>
						<goals>
							<goal>testCompile</goal>
						</goals>
						<configuration>
							<release>16</release>
							<outputDirectory>${project.build.directory}/concurrency-test-classes</outputDirectory>
							<compileSourceRoots>
								<compileSourceRoot>src/test/java-concurrency</compileSourceRoot>
							</compileSourceRoots>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>3.0.0-M5</version>
				<configuration>
					<trimStackTrace>false</trimStackTrace>
					<argLine>@{jacoco.argLine} -XX:TieredStopAtLevel=1 -XX:-TieredCompilation
					--add-opens space.arim.omnibus/space.arim.omnibus.defaultimpl.registry=ALL-UNNAMED</argLine>
				</configuration>
				<dependencies>
					<dependency>
						<groupId>org.junit.jupiter</groupId>
						<artifactId>junit-jupiter-engine</artifactId>
						<version>${junit.version}</version>
						<scope>runtime</scope>
					</dependency>
				</dependencies>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-failsafe-plugin</artifactId>
				<version>3.0.0-M5</version>
				<executions>
					<execution>
						<id>test-concurrency</id>
						<goals>
							<goal>integration-test</goal>
						</goals>
						<configuration>
							<testSourceDirectory>src/test/java-concurrency</testSourceDirectory>
							<testClassesDirectory>${project.build.directory}/concurrency-test-classes</testClassesDirectory>
						</configuration>
					</execution>
					<execution>
						<goals>
							<goal>verify</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<trimStackTrace>false</trimStackTrace>
					<argLine>@{jacoco.argLine}</argLine>
				</configuration>
				<dependencies>
					<dependency>
						<groupId>org.junit.jupiter</groupId>
						<artifactId>junit-jupiter-engine</artifactId>
						<version>${junit.version}</version>
						<scope>runtime</scope>
					</dependency>
				</dependencies>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-invoker-plugin</artifactId>
				<version>3.2.2</version>
				<executions>
					<execution>
						<id>install-artifacts</id>
						<goals>
							<goal>install</goal>
						</goals>
					</execution>
					<execution>
						<id>test-api-consumers</id>
						<goals>
							<goal>integration-test</goal>
						</goals>
						<configuration>
							<goals>verify</goals>
						</configuration>
					</execution>
					<execution>
						<id>verify-api-consumers</id>
						<goals>
							<goal>verify</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<cloneProjectsTo>${project.build.directory}/it</cloneProjectsTo>
					<localRepositoryPath>${project.build.directory}/local-it-repo</localRepositoryPath>
					<parallelThreads>5</parallelThreads>
					<settingsFile>src/it/settings.xml</settingsFile>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<version>3.2.0</version>
				<executions>
					<execution>
						<id>attach-sources</id>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>3.2.0</version>
				<executions>
					<execution>
						<id>attach-javadocs</id>
						<goals>
							<goal>javadoc</goal>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-release-plugin</artifactId>
				<version>3.0.0-M1</version>
				<configuration>
					<tagNameFormat>@{project.version}</tagNameFormat>
				</configuration>
			</plugin>
		</plugins>
	</build>

	<profiles>
		<profile>
			<id>codecov</id>
			<build>
				<plugins>
					<plugin>
						<groupId>org.jacoco</groupId>
						<artifactId>jacoco-maven-plugin</artifactId>
						<version>0.8.6</version>
						<executions>
							<execution>
								<id>default-prepare-agent</id>
								<goals>
									<goal>prepare-agent</goal>
								</goals>
								<configuration>
									<propertyName>jacoco.argLine</propertyName>
								</configuration>
							</execution>
							<execution>
								<id>default-report</id>
								<goals>
									<goal>report</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>
	
	<distributionManagement>
		<repository>
			<id>cloudsmith-deploy</id>
			<url>https://maven.cloudsmith.io/anand-beh/lesser-gpl3/</url>
		</repository>
		<snapshotRepository>
			<id>cloudsmith-deploy</id>
			<url>https://maven.cloudsmith.io/anand-beh/lesser-gpl3/</url>
		</snapshotRepository>
	</distributionManagement>
	
	<dependencies>
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-api</artifactId>
			<version>${junit.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-params</artifactId>
			<version>${junit.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.mockito</groupId>
			<artifactId>mockito-junit-jupiter</artifactId>
			<version>${mockito.version}</version>
			<scope>test</scope>
		</dependency>
	</dependencies>
</project>
